--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+//  Knihovna flywaydb. Ta zajistí to, že při startu si aplikace rovnou vytvoří tabulky, které jsou v databázi potřeba.
     implementation 'org.flywaydb:flyway-core'
 
+//  Databáze H2
     runtimeOnly 'com.h2database:h2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
