--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
 spring:
   datasource:
+    #    Url říká, kde databáze je uložená. za file je umístění. Tečka na začátku znamená aktuální adresář.
     url: jdbc:h2:file:./data/lekce8;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
+    #    Ovladač databáze H2 (java třída)
     driverClassName: org.h2.Driver
+    #    Přihlašovací jméno. sa = system admin
     username: sa
     password: ''
